--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Something</title>
     <link rel="stylesheet" href="index.css" />
   </head>
@@ -8,6 +9,16 @@
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
+    <form class="js-form form">
+      <input type="text" placeholder="what is your name?" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+      <input type="text" placeholder="write a to do" />
+    </form>
+    <ul class="js-toDoList"></ul>
     <script src="clock.js"></script>
+    <script src="gretting.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
